# GGPT

./: .gitignore  .gitmodules  README.md  evaluation.py  ptv3_env.sh  pyproject.toml  requirements_sfm.txt
configs/: benchmark_ggpt.yaml  benchmark_sfm.yaml
feedforward/: __init__.py
ggpt/: run_benchmark_ggpt.py
ggpt/dataloader/: __init__.py  base_dataset.py  demo_dataset.py  eval_dataset.py  points_utils.py
ggpt/model/: base.py  pointtransformer_v3.py
matching/: __init__.py  densematcher.py  vis_match.py
scripts/: benchmark_eval.sh  benchmark_eval_romav2_vggt_lowresmatching.sh
sfm/: run_benchmark_sfm.py  sfm_func.py
sfm/dataloader/: __init__.py  base_dataset.py  demo_dataset.py  extracted.py  transform2D_utils.py
utils/: basic.py  colmap_loader.py  common.py  geometry.py  io.py  logger.py  metric_camera.py  metric_posediffuse.py  points.py  to_pycolmap.py  undistort_images.py
